[gd_scene load_steps=5 format=2]

[ext_resource path="res://Tri/Tri.gd" type="Script" id=1]
[ext_resource path="res://Gold/Gold.tscn" type="PackedScene" id=2]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Fonts/Gugi-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = SubResource( 2 )

[node name="Tri" type="Node2D"]
script = ExtResource( 1 )

[node name="L0" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, -128, 256 )
width = 2.0
default_color = Color( 0.537255, 0.537255, 0.537255, 1 )
begin_cap_mode = 2
end_cap_mode = 2

[node name="L1" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 128, 256 )
width = 2.0
default_color = Color( 0.537255, 0.537255, 0.537255, 1 )
begin_cap_mode = 2
end_cap_mode = 2

[node name="Gold0" parent="." instance=ExtResource( 2 )]
position = Vector2( -104, 112 )
scale = Vector2( 0.2, 0.2 )

[node name="Gold1" parent="." instance=ExtResource( 2 )]
position = Vector2( 104, 112 )
scale = Vector2( 0.2, 0.2 )

[node name="FadeOutTween" type="Tween" parent="."]

[node name="SpeedBoostLabel" type="Node2D" parent="."]
position = Vector2( 80, 0 )

[node name="Label" type="Label" parent="SpeedBoostLabel"]
margin_left = -42.0
margin_top = -26.0
margin_right = 47.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 3 )
text = "SPEED
BOOST!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedBoostTween" type="Tween" parent="."]

[connection signal="tween_completed" from="SpeedBoostTween" to="." method="_on_SpeedBoostTween_tween_completed"]
